test/classes/errors/nilability-init-field-dflt/init-field-dflt-nonnil-shared-from-nonnil-unmanaged.good
init-field-dflt-nonnil-shared-from-nonnil-unmanaged.chpl:11: error: cannot initialize 'shared MyClass' from a 'unmanaged MyClass'
